# bookie

./: .gitignore  README.md
.github/workflows/: format.yml
backend/: .gitignore  pyproject.toml
backend/bookie_backend/: __init__.py  bookmark_parser.py  deamon.py  main.py
backend/bookie_backend/bookie/: daemon.py  deamon.py  main.py
backend/bookie_backend/bookied/: daemon.py  deamon.py
backend/bookie_backend/bookied/data/: crud.py  database.py  models.py  schemas.py
backend/bookie_backend/bookied/utils/: bookmark_parser.py  extract-metadata.py
backend/bookie_backend/data/: crud.py  database.py  models.py
backend/tests/: test_bookmarks_file.html  test_bookmarks_parsing.py  test_cli_daemon.py  test_cli_deamon.py  test_daemon.py  test_deamon.py  test_version.py
frontend/: .gitignore  package-lock.json  package.json  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/components/: bookie_drawer.dart  bookmark_item.dart  logo.dart  new_bookmark.dart
frontend/src/: index.js
frontend/test/: widget_test.dart
