[tool.poetry]
name = "bookie_backend"
version = "0.1.0"
description = "The API Backend for bookie"
authors = ["charitarthchugh <37895518+charitarthchugh@users.noreply.git>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
fastapi = "^0.79.0"
SQLAlchemy = "^2.0.0"
pydantic = "^1.9.1"
uvicorn = "^0.18.2"
typer = "^0.6.1"
rich = "^12.5.1"
psutil = "^5.9.1"


[tool.poetry.dev-dependencies]
black = { extras = ["d"], version = "^22.3.0" }
pytest = "^6.2.5"
pylint = "^2.13.9"
isort = "^5.10.1"
httpie = "^3.2.1"


[tool.poetry.scripts]
bookie = "bookie_backend.bookie.main:app"
bookied = "bookie_backend.bookied.daemon:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
